log
Thu 07 Sep 2023 01:33:04 PM UTC: 
 tests:  0|6
total_score: 0/70
23b8bd8
Thu 07 Sep 2023 01:48:04 PM UTC: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   59 |   map->capacity = capacity;
      |   ^~~
      |   mapa
hashmap.c:59:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f26219
Thu 07 Sep 2023 01:48:30 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   60 |   mapa->keys = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   61 |   mapa->values = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:63:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   63 |   if (mapa->keys == NULL || map->values == NULL) {
      |           ^~
hashmap.c:63:29: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   63 |   if (mapa->keys == NULL || map->values == NULL) {
      |                             ^~~
      |                             mapa
hashmap.c:63:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   65 |         free(mapa->keys);
      |                  ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   66 |         free(mapa->values);
      |                  ^~
hashmap.c:72:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   72 |         mapa->keys[i] = -1;
      |             ^~
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   73 |         mapa->values[i] = 0;
      |             ^~
hashmap.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05b242c
Thu 07 Sep 2023 01:48:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   60 |   mapa->keys = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   61 |   mapa->values = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:63:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   63 |   if (mapa->keys == NULL || mapa->values == NULL) {
      |           ^~
hashmap.c:63:33: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   63 |   if (mapa->keys == NULL || mapa->values == NULL) {
      |                                 ^~
hashmap.c:65:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   65 |         free(mapa->keys);
      |                  ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   66 |         free(mapa->values);
      |                  ^~
hashmap.c:72:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   72 |         mapa->keys[i] = -1;
      |             ^~
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   73 |         mapa->values[i] = 0;
      |             ^~
Compilation failed
f968d44
Thu 07 Sep 2023 01:49:25 PM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   60 |   mapa->key = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   61 |   mapa->value = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:63:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   63 |   if (mapa->key == NULL || mapa->value == NULL) {
      |           ^~
hashmap.c:63:32: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   63 |   if (mapa->key == NULL || mapa->value == NULL) {
      |                                ^~
hashmap.c:65:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   65 |         free(mapa->key);
      |                  ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   66 |         free(mapa->value);
      |                  ^~
hashmap.c:72:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   72 |         mapa->key[i] = -1;
      |             ^~
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   73 |         mapa->value[i] = 0;
      |             ^~
Compilation failed
5a161eb
Thu 07 Sep 2023 01:50:31 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   61 |   mapa->key = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:62:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   62 |   mapa->value = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:64:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   64 |   if (mapa->key == NULL || mapa->value == NULL) {
      |           ^~
hashmap.c:64:32: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   64 |   if (mapa->key == NULL || mapa->value == NULL) {
      |                                ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   66 |         free(mapa->key);
      |                  ^~
hashmap.c:67:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   67 |         free(mapa->value);
      |                  ^~
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   73 |         mapa->key[i] = -1;
      |             ^~
hashmap.c:74:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   74 |         mapa->value[i] = 0;
      |             ^~
Compilation failed
1439275
Thu 07 Sep 2023 01:53:31 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   60 |   mapa->key = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   61 |   mapa->value = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:63:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   63 |   if (mapa->key == NULL || mapa->value == NULL) {
      |           ^~
hashmap.c:63:32: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   63 |   if (mapa->key == NULL || mapa->value == NULL) {
      |                                ^~
hashmap.c:65:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   65 |         free(mapa->key);
      |                  ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   66 |         free(mapa->value);
      |                  ^~
hashmap.c:72:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   72 |       mapa->key[i] = -1;
      |           ^~
hashmap.c:73:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   73 |       mapa->value[i] = 0;
      |           ^~
Compilation failed
86bd732
Thu 07 Sep 2023 01:54:58 PM UTC: 
 hashmap.c | 29 ++++++++++++++---------------
 1 file changed, 14 insertions(+), 15 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   62 |     map->pairs = malloc(sizeof(Pair) * capacity);
      |        ^~
hashmap.c:63:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   63 |     if (map->pairs == NULL) {
      |            ^~
hashmap.c:71:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   71 |         map->pairs[i].key = NULL;
      |            ^~
hashmap.c:72:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   72 |         map->pairs[i].value = NULL;
      |            ^~
Compilation failed
01b7f94
